default/objects/White_Space_Template_Cell_Field__c/fields/DisplayFieldId__c.field-meta.xml
<CustomField>
    <fullName>DisplayFieldId__c</fullName>
    <description>Id of the associated whitespace display field</description>
    <label>Display Field Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>