default/objects/White_Space_Template_Cell_Field__c/fields/ValueMapping__c.field-meta.xml
<CustomField>
    <fullName>ValueMapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to mapping object</description>
    <label>Value Mapping</label>
    <referenceTo>Mapping__c</referenceTo>
    <relationshipLabel>White Space Template Cell Fields</relationshipLabel>
    <relationshipName>White_Space_Template_Cell_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>