default/objects/White_Space_Template_Cell_Field__c/fields/WhitespaceTemplate__c.field-meta.xml
<CustomField>
    <fullName>WhitespaceTemplate__c</fullName>
    <label>Cross-Sell Template</label>
    <referenceTo>White_Space_Template__c</referenceTo>
    <relationshipLabel>Cross-Sell Template Cell Fields</relationshipLabel>
    <relationshipName>White_Space_Template_Cell_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>